force-app/main/default/objects/School__c/fields/Maximum_Fee__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Fee__c</fullName>
    <label>Maximum Fee</label>
    <summarizedField>Student__c.Fee__c</summarizedField>
    <summaryForeignKey>Student__c.School__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>