force-app/main/default/objects/School__c/fields/Students_Count__c.field-meta.xml
<CustomField>
    <fullName>Students_Count__c</fullName>
    <label>Students Count</label>
    <summaryForeignKey>Student__c.School__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>