force-app/main/default/objects/School__c/fields/Sum_of_fee__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_fee__c</fullName>
    <label>Sum of fee</label>
    <summarizedField>Student__c.Fee__c</summarizedField>
    <summaryForeignKey>Student__c.School__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>